# py-thesaurus-interface

./: .gitignore  .travis.yml  MANIFEST.in  README.md  pyproject.toml  setup.py  test_local_setup.sh  tests.py
.github/workflows/: ci.yml  tests_build.yml
nerscmetadata/: gcmd_keywords.py  tests.py
nerscmetadata-0.1-py2.7.egg/EGG-INFO/: PKG-INFO  SOURCES.txt
nerscmetadata-0.1.2-py2.7.egg/EGG-INFO/: PKG-INFO  SOURCES.txt  top_level.txt
nerscmetadata-0.1.2-py2.7.egg/nerscmetadata/: gcmd_keywords.py
nerscmetadata-0.1.2-py2.7.egg/nerscmetadata/json/: gcmd_keywords.json
nerscmetadata/json/: gcmd_keywords.json
pythesint/: .pythesintrc.yaml  __init__.py  cf_keywords.py  cf_standard_names.py  cf_thesaurus.py  cf_vocabulary.py  gcmd_keywords.py  gcmd_thesaurus.py  gcmd_vocabulary.py  iso19115_thesaurus.py  iso19115_vocabulary.py  iso_topic_category_list.py  json_thesaurus.py  json_vocabulary.py  mmd_vocabulary.py  pathsolver.py  pythesint.py  pythesintrc.yaml  tests.py  thesaurus.py  tools.py  utils.py  vocabulary.py  wkv_thesaurus.py  wkv_vocabulary.py
pythesint/basedata/: gcmd_horizontalresolutionrange  gcmd_instrument  gcmd_location  gcmd_platform  gcmd_project  gcmd_provider  gcmd_rucontenttype  gcmd_science_keyword  gcmd_temporalresolutionrange  gcmd_verticalresolutionrange  wkv_variable
pythesint/tests/: test_cf_vocabulary.py  test_gcmd_vocabulary.py  test_json_vocabulary.py  test_mmd_vocabulary.py  test_pythesint.py  test_vocabulary.py  test_wkv_vocabulary.py  tests.py
